fix shop-cart z-index

--- a/packages/docs/src/routes/(shop)/shop.css
+++ b/packages/docs/src/routes/(shop)/shop.css
@@ -50,3 +50,11 @@
   background-color: var(--text-color);
   color: var(--bg-color);
 }
+
+.shop-cart {
+  @apply fixed right-6 z-[100] pt-[55px];
+}
+
+.header-open .shop-cart {
+  z-index: 99;
+}
